Remove hard-coded total monthly payment from footer

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Footer -->
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <div>Total due monthly: <span id="totalMonthly">$196.67</span></div>
+        <div>Total due monthly: <span id="totalMonthly"></span></div>
       </div>
     </footer>
 
