Complete confirm delete feature

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
       <div class="modal-dialog modal-dialog-centered" tabindex="-1">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="confirmDeleteLabel">
-              Delete this card?
-            </h5>
+            <h5 class="modal-title" id="confirmDeleteLabel">Delete Card</h5>
             <button
               type="button"
               class="btn-close"
@@ -117,7 +115,7 @@
             >
               <span class="material-icons-outlined"> cancel </span>
             </button>
-            <button id="confirmDelete" class="btn btn-primary">
+            <button id="confirmDeleteBtn" class="btn btn-primary">
               <span class="material-icons-outlined"> check </span>
             </button>
           </div>
