--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <!-- Header -->
     <header class="container mt-3 text-center">
       <h1>0% Interest Credit Card Calculator</h1>
-      <p>How much do I need to pay each month?</p>
+      <p class="d-flex align-items-center justify-content-center">
+        How much do I need to pay each month?<span
+          id="explainer"
+          class="material-icons-outlined"
+          >help</span
+        >
+      </p>
     </header>
 
     <main class="container">
