--- a/index.html
+++ b/index.html
@@ -129,6 +129,49 @@
       </div>
     </div>
 
+    <!-- Explainer Modal -->
+    <div class="modal fade" id="explainer-modal" data-bs-keyboard="false">
+      <div class="modal-dialog modal-dialog-centered" tabindex="-1">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="explainerLabel">How to Use This App</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>This app allows you to keep track of 0% interest credit cards.</p>
+            <ul>
+              <li>Add new cards with a name, amount due, and expiration date of 0% APR.</li>
+              <li>Edit card details to either update card balances, change the name, or move the expiration date.</li>
+              <li>Delete cards from those being tracked.</li>
+              <li>View sum of all payments due monthly at the bottom of the screen.</li>
+            </ul>
+            <h6>Adding a Card</h6>
+            <ol>
+              <li>Click the <span class="btn btn-primary">Add</span> button.</li>
+              <li>Fill in the name of the card or account, the current amount due, and the expiration date of the 0% APR.</li>
+              <li>Click the <span class="material-icons-outlined">save</span> button to save the card.</li>
+            </ol>
+          </div>
+          <div class="modal-footer">
+            <button
+              id="submit-new-entry"
+              class="btn btn-danger"
+              data-bs-dismiss="modal"
+            >
+              <span class="material-icons-outlined"> cancel </span>
+            </button>
+            <button id="confirmDeleteBtn" class="btn btn-primary">
+              <span class="material-icons-outlined"> check </span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
