Complete explainer modal with content

--- a/index.html
+++ b/index.html
@@ -142,31 +142,82 @@
             ></button>
           </div>
           <div class="modal-body">
-            <p>This app allows you to keep track of 0% interest credit cards.</p>
+            <h6>Introduction</h6>
+            <p>
+              Nobody likes to pay interest. It's almost like throwing your money
+              out of a moving car, except the people on the sidewalk aren't
+              screeming fans or those in need. If you qualify for a 0% APR
+              credit card or loan, you are one step closer to financial freedom.
+              "How do I keep track of my 0% interest cards," you're asking? This
+              app can help.
+            </p>
+            <p>
+              Track all your 0% interest credit cards. Calculate when and how
+              much you need to pay each month for each card. See a sum of your
+              total monthly payment so you can stay on top of your expenses.
+            </p>
+            <h6>Overview</h6>
+            <p>
+              This app allows you to keep track of 0% interest credit cards.
+            </p>
             <ul>
-              <li>Add new cards with a name, amount due, and expiration date of 0% APR.</li>
-              <li>Edit card details to either update card balances, change the name, or move the expiration date.</li>
+              <li>
+                Add new cards with a name, amount due, and the date 0% APR
+                expires.
+              </li>
+              <li>
+                Months to pay off and monthly payment will be calculated so you
+                never pay any interest.
+              </li>
+              <li>
+                Edit card details to update balances, change the
+                name, or move the expiration date.
+              </li>
               <li>Delete cards from those being tracked.</li>
-              <li>View sum of all payments due monthly at the bottom of the screen.</li>
+              <li>
+                View a sum of all payments due monthly at the bottom of the
+                screen.
+              </li>
             </ul>
             <h6>Adding a Card</h6>
             <ol>
-              <li>Click the <span class="btn btn-primary">Add</span> button.</li>
-              <li>Fill in the name of the card or account, the current amount due, and the expiration date of the 0% APR.</li>
-              <li>Click the <span class="material-icons-outlined">save</span> button to save the card.</li>
+              <li>
+                Click the <span class="btn btn-primary">Add</span> button.
+              </li>
+              <li>
+                Fill in the name of the card or account, the current amount due,
+                and the expiration date of the 0% APR.
+              </li>
+              <li>
+                Click the
+                <span class="material-icons-outlined btn btn-primary"
+                  >save</span
+                >
+                button to save the card.
+              </li>
             </ol>
-          </div>
-          <div class="modal-footer">
-            <button
-              id="submit-new-entry"
-              class="btn btn-danger"
-              data-bs-dismiss="modal"
-            >
-              <span class="material-icons-outlined"> cancel </span>
-            </button>
-            <button id="confirmDeleteBtn" class="btn btn-primary">
-              <span class="material-icons-outlined"> check </span>
-            </button>
+            <h6>Editing a Card</h6>
+            <ol>
+              <li>
+                Click the <span class="material-icons-outlined">edit</span> icon
+                to begin editing.
+              </li>
+              <li>
+                Name, amount due, and expiration date fields will become
+                editable.
+              </li>
+              <li>
+                Change the information you want to and click the
+                <span class="material-icons-outlined">save</span> icon to save
+                the changes.
+              </li>
+            </ol>
+            <h6>Deleting a Card</h6>
+            <p>
+              To delete a card, simply click the
+              <span class="material-icons-outlined">delete</span> icon on the
+              card. You'll be asked to confirm deletion.
+            </p>
           </div>
         </div>
       </div>
